# e2e-federation

.github/start-services/: action.yml
gateway/: server.ts
orders/: app.py  pyproject.toml
orders/api/: schema.py  types.py
products/: pyproject.toml
products/api/: schema.py  types.py
